--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "modal": "^1.2.0",
+    "sass": "^1.54.5",
     "vue": "^3.2.33",
     "vue-final-modal": "^3.4.4",
     "vue-mq": "^1.0.1",
